fix AOS animation on mobile

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -1,3 +1,5 @@
+@import "@/assets/base/breakpoints";
+
 .underline{
   position: relative;
   &:after {
@@ -111,4 +113,20 @@
 .slide-bottom-leave-to {
   opacity: 0;
   transform: translate3d(0, 15px, 0);
+}
+
+@include media('<ipad-pro'){
+  [data-aos^=fade][data-aos^=fade],
+  [data-aos^=zoom][data-aos^=zoom]
+  {
+    opacity: 1!important;
+  }
+  [data-aos=fade-right],
+  [data-aos=fade-left],
+  [data-aos=fade-up],
+  [data-aos=fade-down],
+  [data-aos=zoom-in],
+  [data-aos=zoom-out]{
+    transform: none!important;
+  }
 }
